regex needed case insensitive

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" ng-app="elfin">
 <head>
-  <link type="image/ico" href="/img/favicon.ico">
+  <link type="image/x-icon" rel='shortcut icon' href="/img/favicon.ico">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
   <style>
           html                    { overflow-y:scroll; }
