--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,8 @@
 <html lang="en-US" ng-app="elfin">
 <head>
   <link type="image/x-icon" rel='shortcut icon' href="/img/favicon.ico">
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-  <style>
-          html                    { overflow-y:scroll; }
-          body                    { padding-top:50px; }
-  </style>
-
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="/js/core.js"></script>
   <title>Elfin</title>
 <head>
@@ -23,7 +18,7 @@
   </ul>
 </div>
 
-<img src="/img/seaotter.png" alt="sea otter" style="width:400px;height:334px;" >
+<img src="/img/seaotter.png" alt="sea otter" width="400px" height="334px" >
 
 </body>
 </html>
