changed format to have query in url

--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" ng-app="elfin">
 <head>
+  <base href="/">
   <link type="image/x-icon" rel='shortcut icon' href="/img/favicon.ico">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="/style/core.css">
